--- a/01_agama/dirgha/DA_10.md
+++ b/01_agama/dirgha/DA_10.md
@@ -498,7 +498,7 @@ The monks accepted his instructions and listened.
 4. {:#n4}*Constant mindfulness of oneself*. C. 常自念身, P. kāyagatā sati sātasahagatā, S. kāyagatā smrtiḥ. The Chinese might also be read “Constant mindfulness of one’s body.” [\[back\]](#ref4)
 5. {:#n5}*Contemplation of the foul discharges*. C. 惡露觀. This is synonymous with the contemplation of foulness (P. asubha bhāvana) according to a passage in the *Dharmaguptaka Vinaya* (T1428.582a4-6). [\[back\]](#ref5)
 6. {:#n6}*central country*. I.e., a civilized region rather than a frontier region that’s barbaric. The conditions in lawless regions in the ancient world was not conducive to practicing. In India, a central country would be places like Śrāvastī and Magadha. [\[back\]](#ref6)
-7. {:#n7}This list differs from that found in Theravāda and Sarvâstivāda parallels. There is a lengthy commentary on this version of the seven concepts found in the *Śāriputra Abhidharma* (cf. T1548.638b9ff). [\[back\]](#ref7)
+7. {:#n7}This list differs from that found in Theravāda and Sarvāstivāda parallels. There is a lengthy commentary on this version of the seven concepts found in the *Śāriputra Abhidharma* (cf. T1548.638b9ff). [\[back\]](#ref7)
 8. {:#n8}*Changes to the senses*. C. 除入, P. abhibhāyatanāni, S. abhibhvāyatanāni. On the face of it, the Chinese appears to mean “eliminated” or “removed,” as these are the most common readings for 除. In Pali and Sanskrit sources, the term is interpreted as P. abhibhā, or “mastery,” and this is confirmed by later Chinese translations of Sanskrit Abhidharma. Interestingly, an equivalent reading (除處) is found in MĀ 215 (T26.799c25) for these eight perceptions. However, the *Śāriputra Abhidharma* (cf. 1548.642a19ff.) calls the list 勝入 (“overcoming the senses”), so both readings existed in translations of pre-Sanskrit texts. Given this situation, it’s important to note that 除 has less frequent readings in classical Chinese as “to govern, fix, correct” and “to change, turn over (e.g., a new year).” They may be closer to the intended meaning in these older translations than the usual readings. I’ve translated the term accordingly. [\[back\]](#ref8)
 9. {:#n9}The *Śāriputra Abhidharma* (T1548.639b16ff.) describes the oppressive fear that arises when one’s death is imminent to explain the concept of the pain of impermanence. Thus, it’s the unpleasant feelings one has when facing one’s mortality. [\[back\]](#ref9)
 10. {:#n10}The *Śāriputra Abhidharma* (T1548.639c2ff.) describes the lack of tranquility and right liberation that results from supposing that the awareness, body, and external things are oneself or belong to oneself. [\[back\]](#ref10)
