--- a/01_agama/dirgha/DA_22.md
+++ b/01_agama/dirgha/DA_22.md
@@ -262,7 +262,7 @@ He responded, “Very well! I’d be glad to hear it.”
 ### Notes
 
 1. {:#n1}This is <em>sūtra</em> no. 22 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0094a18" target="_blank">T1.1.94a18-6c15</a>). The direct parallel for this <em>sūtra</em> is <a href="https://suttacentral.net/dn4" target="_blank">DN 4</a>. [\[back\]](#ref1)
-2. {:#n2}*Śroṇatāṇḍya*. This is a Sanskrit attestation equivalent to P. Soṇadaṇḍa that’s found in a Sarvâstivāda parallel to this sutra. The Chinese text translates his name as “Planting Virtue” (種德).[\[back\]](#ref2)
+2. {:#n2}*Śroṇatāṇḍya*. This is a Sanskrit attestation equivalent to P. Soṇadaṇḍa that’s found in a Sarvāstivāda parallel to this sutra. The Chinese text translates his name as “Planting Virtue” (種德).[\[back\]](#ref2)
 3. {:#n3}*three Vedas*. The Chinese literally reads “the three-division hymns of the other training” (異學三部諷誦), which seems to be a roundabout description of the three Vedas of the Brahmanical tradition. [\[back\]](#ref3)
 4. {:#n4}*Arhat*. This term is often translated in different ways in Chinese when it occurs in this standard expression. Here it’s translated as “reached what’s real” or perhaps simply “fully realized” (至真). [\[back\]](#ref4)
 5. {:#n5}*Puṣkarasārin*. This is the S. equivalent of the priest Pokkharasāti in Pali, which matches the Chinese transliteration. [\[back\]](#ref5)
