--- a/01_agama/dirgha/DA_24.md
+++ b/01_agama/dirgha/DA_24.md
@@ -153,7 +153,7 @@ The Buddha told the prominent man’s son, “This monk’s name was Aśvajit.[\
 
 1. {:#n1}This is <em>sūtra</em> no. 24 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0101b14" target="_blank">T1.1.101b14-2c23</a>). The direct parallel for this sutra is <a href="https://suttacentral.net/dn11" target="_blank">DN 11</a>. [\[back\]](#ref1)
 2. {:#n2}C. 那難陀, MCh. “na-nan-da,” P. Nāḷandā. C. 波婆利掩次, MCh. “pua-bua-lji-iam-tsi,” P. Pavārikamba. I’ve adopted the S. equivalent of the Chinese transliterations. [\[back\]](#ref2)
-3. {:#n3}*Dhruva*. C. 堅固. This back-translation is an educated guess based on the Chinese translation of his name as “steadfast,” which differs from the Pali and Sanskrit interpretation of Kevaddha or Kaivarta as meaning “fisherman” or “mariner.” We should note that the Sarvâstivāda version of this sutra agrees with the Theravāda in naming the interlocutor Kaivartin, which is a Sanskritization of Kevaṭṭa. A Chinese transliterated equivalent of Kevaṭṭa (鷄筏多) is found in Xuanzang’s *Mahāvibhāṣā* (another Sarvâstivāda source), which quotes this sutra’s introduction at T1545.531c6-532a15. A classical Chinese glossary (T2130.1021a11) interprets a close equivalent of that transliteration (鷄和哆) to mean “fisherman” like P. Kevaddha. [\[back\]](#ref3)
+3. {:#n3}*Dhruva*. C. 堅固. This back-translation is an educated guess based on the Chinese translation of his name as “steadfast,” which differs from the Pali and Sanskrit interpretation of Kevaddha or Kaivarta as meaning “fisherman” or “mariner.” We should note that the Sarvāstivāda version of this sutra agrees with the Theravāda in naming the interlocutor Kaivartin, which is a Sanskritization of Kevaṭṭa. A Chinese transliterated equivalent of Kevaṭṭa (鷄筏多) is found in Xuanzang’s *Mahāvibhāṣā* (another Sarvāstivāda source), which quotes this sutra’s introduction at T1545.531c6-532a15. A classical Chinese glossary (T2130.1021a11) interprets a close equivalent of that transliteration (鷄和哆) to mean “fisherman” like P. Kevaddha. [\[back\]](#ref3)
 4. {:#n4}*Gola*. C. 瞿羅. This is a guess at an obscure transliteration. Both DN 11 and *Mahāvibhāṣā* (T1545.531c26) cite a spell called Gandhārī (健馱梨, c.f. T2128.767c7). In this version, the second spell will be called Gandhārī, which will be called Māṇikā in DN 11 and Kṣaṇika (刹尼迦) in the *Mahāvibhāṣā* (T1545.532a5). [\[back\]](#ref4)
 5. {:#n5}*Aśvajit*. C. 阿室已, MCh. “a-shiet-i.” This is the only occurrence of this transliteration in Chinese Buddhist texts. A clue that we have about its meaning comes from the glossary 新集藏經音義隨函錄 (K 34.1257.1061c) which reads: “阿室已: 下一音似亦云阿說木此云馬勝.” 木 here is likely a typo for 示. 阿說示 is a better known transliteration for one of the Buddha’s initial disciples, S. Aśvajit (P. Assaji), and 馬勝 (“horse victor,” i.e., a thoroughbred) was a Chinese translation of his name. [\[back\]](#ref5)
 
