--- a/01_agama/dirgha/DA_29.md
+++ b/01_agama/dirgha/DA_29.md
@@ -178,13 +178,13 @@ Lohitya said, “Yes, it’s true that this happened.”
 
 ### Notes
 
-1. {:#n1}This is <em>sūtra</em> no. 29 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0112c20" target="_blank">T1.1.112c20-114b1</a>).This <em>sūtra</em> is a close parallel with Pali <a href="https://suttacentral.net/dn12" target="_blank">DN 12</a>. Aside from differences in details, there are two major departures from the Pali <em>sutta</em>.<br/>
+1. {:#n1}This is <em>sūtra</em> no. 29 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0112c20" target="_blank">T1.1.112c20-114b1</a>).This <em>sūtra</em> is a close parallel with <a href="https://suttacentral.net/dn12" target="_blank">DN 12</a>. Aside from differences in details, there are two major departures from the Pali <em>sutta</em>.<br/>
 First, Lohitya visits the Buddha personally to invite him and the monks for a meal. The Buddha gives him a Dharma teaching, which Lohitya apparently finds insulting because he forms a wrong view that religious teachers should keep their teachings to themselves. In the Pali, this encounter doesn’t happen. Instead, Lohicca’s wrong view is simply stated at the outset.<br/>
-The second major difference is that the Q&A between the Buddha and Lohitya takes place at the end of the DA sutra and culminates in Lohitya’s conversion to the Buddha’s teaching. In the Pali, the Q&A section comes before the discourse on the three blameworthy teachers. [\[back\]](#ref1)
+The second major difference is that the Q&A between the Buddha and Lohitya takes place at the end of the DĀ <em>sūtra</em> and culminates in Lohitya’s conversion to the Buddha’s teaching. In the Pali, the Q&A section comes before the discourse on the three blameworthy teachers. [\[back\]](#ref1)
 2. {:#n2}*\*Śālavatī*. This is an educated guess based on the Chinese transliteration. Pali: Sālavatikā.<br/>
 *rosewood grove*. The Chinese appears to transliterate śiṃśapā, which is a S. name for the Dalbergia sissoo tree, sometimes called Indian rosewood in English. [\[back\]](#ref2)
-3. {:#n3}<em>Lohitya</em>. The Sanskrit name Lohitya is attested in the Sarvâstivāda Dīrghâgama; however, many Central Asian texts give his name as Lokecca. The Chinese transliteration only indicates the first and last syllable (“lo” and “cha”).<br/>
-This brahmin appears again in SN 35.132 and SA 255. One of the many curiosities we encounter when comparing the Pali and Chinese, Lohicca converts at the end of SN 35.132 as he does in DN 12, but he simply praises his interlocutor and returns home in SA 255. Thus, in the Pali tradition there appears to be two brahmins named Lohicca, while in the Chinese it may well be the same brahmin. [\[back\]](#ref3)
+3. {:#n3}<em>Lohitya</em>. The Sanskrit name Lohitya is attested in the Sarvāstivāda <cite>Dīrgha Āgama</cite>; however, many Central Asian texts give his name as Lokecca. The Chinese transliteration only indicates the first and last syllable (“lo” and “cha”).<br/>
+This brahmin appears again in SN 35.132 and SĀ 255. One of the many curiosities we encounter when comparing Pali and Chinese parallels is that Lohicca converts at the end of SN 35.132 as he does in DN 12, but he simply praises his interlocutor and returns home in SĀ 255. Thus, in the Pali tradition there appears to be two brahmins named Lohicca, while in the Chinese it may well be the same brahmin. [\[back\]](#ref3)
 4. {:#n4}<em>Brahmin due</em> is probably a translation of brahma-deya, which refers to gifts made to the brahmin caste by rulers and others. [\[back\]](#ref4)
 5. {:#n5}<em>other canon of three divisions</em>. Chinese: This appears to describe the three Vedas. [\[back\]](#ref5)
 
