--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -87,7 +87,7 @@ next: MA_003.html
 </tr>
   <tr>
     <td class='ch' title='t26.1.422b28'>「彼爲漏盡阿羅訶比丘。 三十三天集在善法正殿，咨嗟、稱歎： 『某尊弟子於某村邑剃除鬚髮，著袈裟衣，至信捨家，無家學道。 諸漏已盡，心解脱、慧解脱。 於現法中，自知、自覺自作證成就遊。 「生已盡，梵行已立，所作已辦。 不更受有，知如眞。」』</td>
-    <td id='p16'>16. “He becomes an <em>arhat</em><sup id="ref13"><a href="#n13">13</a></sup> monk whose contaminants have ended. The Trāyastriṃśa gods assemble in the Sudharmā Meeting Hall, sighing admiringly and praising them, ‘Some worthy disciple at some town shaved off their hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness. Once their contaminants were ended, their mind was liberated, and their wisdom was liberated. In the present life, they accomplished and dwelt in their own knowledge, awakening, and direct experience. They truly know: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.”’</td>
+    <td id='p16'>16. “He becomes an <em>arhat</em><sup id="ref13"><a href="#n13">13</a></sup> monk whose contaminants have ended. The Trāyastriṃśa gods assemble in the Sudharmā Meeting Hall, sighing admiringly and praising them, ‘Some worthy disciple at some town shaved off their hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness. Once their contaminants were ended, their mind was liberated, and their wisdom was liberated. In the present life, they accomplished and dwelt in their own knowledge, awakening, and direct experience. They truly know: “Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.”’</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.422c4'>「是謂漏盡阿羅訶共集會也，如三十三天晝度樹下共集會也。」</td>
