--- a/01_agama/dirgha/DA_30-8.md
+++ b/01_agama/dirgha/DA_30-8.md
@@ -574,7 +574,7 @@ Will become my equals!’”
 168\. “Fourth, clouds may have thunder and lightning, and a forecaster says it will rain. However, the master of clouds and master of rain are careless and lustful, so they never release the rain. This is the [fourth] reason forecasters are mistaken.
 {:#p168}
 
-169\. “Fifth, clouds may have thunder and lightning, and a forecaster says it will rain. However, the world’s population behaves contrary to the Dharma. They carelessly do impure deeds, and they are stingy, jealous, and hold deluded views. This causes the heavens not to release its rain. This is the [fifth] reason forecasters are mistaken. These are the five causes and conditions for forecasters to be uncertain about rain.
+169\. “Fifth, clouds may have thunder and lightning, and a forecaster says it will rain. However, the world’s population behaves contrary to the Dharma. They carelessly do impure deeds, and they are stingy, jealous, and hold deluded views. This causes the heavens not to release its rain. This is the [fifth] reason forecasters are mistaken. These are the five causes and conditions for forecasters to be uncertain about rain.”
 {:#p169}
 
 ---
@@ -582,7 +582,7 @@ Will become my equals!’”
 ### Notes
 
 1. {:#n1}This is Chapter 8 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0131a03" target="_blank">T1.1.131a3-7a23</a>). [\[back\]](#ref1)
-2. {:#n2}<em>Pāruṣaka</em>. C. 麤澁, P. Phārusaka, S. Pāruṣaka. The C. translation means “rough,” which matches the meaning of S. paruṣa. Alternate C. sources agree on this meaning, and one (T 25) transliterates the name as paruṣa (波婁沙). S. Pāruṣa, on the other hand, is the name of a tree. This confusion might happen in G. or T., which drop long vowels. As we’ll see below, DĀ 30 glosses the names of these parks as referring to the effects they have on the gods who visit them. [\[back\]](#ref2)
+2. {:#n2}<em>Pāruṣaka</em>. C. 麤澁, P. Phārusaka, S. Pāruṣaka. The C. translation means “rough,” which matches the meaning of S. paruṣa. Alternate C. sources agree on this meaning, and one (T 25) transliterates the name as paruṣa (波婁沙). S. Pāruṣa, on the other hand, is the name of a tree. This confusion might happen in Gandhari or Tocharian, which drop long vowels. As we’ll see below, DĀ 30 glosses the names of these parks as referring to the effects they have on the gods who visit them. [\[back\]](#ref2)
 3. {:#n3}<em>Citraratha</em>. The Chinese translates the name as “Painting (畫) Pleasure (樂),” which translates S. citra-ratha literally. This agrees with the name of a Trāyastriṃśa park in S. and P. sources. [\[back\]](#ref3)
 4. {:#n4}<em>Miśrakā</em>. C. 雜. The Chinese translates this name as “Mixed,” which matches the meaning of S. miśra. Miśrakāvana is the name of a Trāyastriṃśa park in S. and P. sources. [\[back\]](#ref4)
 5. {:#n5}<em>Anusudarśana (?)</em>. C. 順善見. The Chinese translates the second seat’s name as “Following Good View.” Alternate Chinese translations of this passage render it as “Smaller Good View” (小善見). It must have been smaller, meant for a servant to sit on, perhaps. I’ve guessed that 順 translates the prefix S. anu-, but I’ve found no Indic parallels to use for confirmation. [\[back\]](#ref5)
