--- a/01_agama/dirgha/DA_30-9.md
+++ b/01_agama/dirgha/DA_30-9.md
@@ -364,7 +364,7 @@ next: DA_30-10.html
 ### Notes
 
 1. {:#n1}This is Chapter 9 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0137b01" target="_blank">T1.1.137b1-41a20</a>). [\[back\]](#ref1)
-2. {:#n2}This story is parallel to the Seven Suns Sutra (cf. <a href="https://suttacentral.net/an7.66" target="_blank">AN 7.66</a> and <a href="../madhyama/MA_008.html" target="_blank">MĀ 8</a>. [\[back\]](#ref2)
+2. {:#n2}This story is parallel to the Seven Suns Sutra (cf. <a href="https://suttacentral.net/an7.66" target="_blank">AN 7.66</a> and <a href="../madhyama/MA_008.html" target="_blank">MĀ 8</a>). [\[back\]](#ref2)
 3. {:#n3}Mount Sudarśana has been omitted from this section, probably an accidental copyist error given that the sizes of the mountains don’t match those found in Chapter 1 from this point until it’s corrected for Mount Cakravāḍa. [\[back\]](#ref3)
 
 ---
