--- a/01_agama/ekottarika/16/EA_16_02.md
+++ b/01_agama/ekottarika/16/EA_16_02.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | Chapter 16: The Fire Extinguished | 2. Nirvā
 type: kramdown
 base: ../../../
 previous: EA_16_01.html
-next: ../19/EA_19_01.html
+next: EA_16_03.html
 ---
 
 <h1><a href='../index.html'>The Numerical Discourses</a></h1>
@@ -19,7 +19,7 @@ next: ../19/EA_19_01.html
   </tr>
   <tr>
     <td class='ch' title='t125.2.579a13'>爾時，世尊告諸比丘： 「有此二法涅槃界。 云何為二？ 有餘涅槃界、無餘涅槃界。 彼云何名為有餘涅槃界？ 於是，比丘滅五下分結，即彼般涅槃不還來此世。 是謂名為有餘涅槃界。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are two realms of <em>nirvāṇa</em>. What are the two? The <em>nirvāṇa</em> realm with remainder and the <em>nirvāṇa</em> realm without remainder. What’s called the <em>nirvāṇa</em> realm with remainder? Here, a monk destroys the five lower bonds, and then he <em>parinirvāṇa</em>s [after] not returning to this world. This is said to be the <em>nirvāṇa</em> realm with remainder.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are two realms of <em>nirvāṇa</em>.<sup id="ref2"><a href="#n2">2</a></sup> What are the two? The <em>nirvāṇa</em> realm with remainder and the <em>nirvāṇa</em> realm without remainder. What’s called the <em>nirvāṇa</em> realm with remainder? Here, a monk destroys the five lower bonds, and then he <em>parinirvāṇa</em>s [after] not returning to this world. This is said to be the <em>nirvāṇa</em> realm with remainder.</td>
   </tr>
   <tr>
     <td class='ch' title='t125.2.579a17'>「彼云何名為無餘涅槃界？ 於是，比丘盡有漏，成無漏。 意解脫、智慧解脫。 自身作證而自遊戲： 『生死已盡，梵行已立。 更不受有，如實知之。』 是謂為無餘涅槃界。 此二涅槃界。</td>
