--- a/01_agama/madhyama/MA_106.md
+++ b/01_agama/madhyama/MA_106.md
@@ -40,7 +40,7 @@ next: MA_127.html
 <h3 id="notes">Notes</h3>
 
 <ol>
-<li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0596b09" target="_blank">T26.1.596b9-c17</a>. It’s parallels include <a href="https://suttacentral.net/mn1" target="_blank">MN 1</a>, EĀ 44.6, and T56. It has a stronger resemblance to T56, while MN 1 and EĀ 44.6 are quite similar to each other.<br/>
+<li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0596b09" target="_blank">T26.1.596b9-c17</a>. Its parallels include <a href="https://suttacentral.net/mn1" target="_blank">MN 1</a>, EĀ 44.6, and T56. It has a stronger resemblance to T56, while MN 1 and EĀ 44.6 are quite similar to each other.<br/>
 The main difference between this version and MN 1 is that the Theravāda version goes through the analysis of the list of concepts eight times as opposed to three times in MĀ 106. Both begin with the case of the deluded person who believes the various concepts are a form of soul (S. <em>atman</em>). MĀ 106 then moves to the case of someone who understands these concepts properly as not being a soul. Finally, the Buddha says the same of himself. MN 1 adds the case of a trainee monk between a common person and an <em>arhat</em> and finishes with the Buddha’s own knowledge about these things. MN 1 repeats some of these cases to make different statements about attainments, such as the elimination of the three unskillful roots.<br/>
 The closest parallel to MN 1, EĀ 44.6, is a much more succinct version but covers the same four cases: the ordinary person, the unliberated disciple, the <em>arhat</em>, and the Tathāgata. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>earth … everything.</em> C. <span class="ch">地⋯水⋯火⋯風⋯神⋯天⋯生主⋯梵天⋯無煩⋯無熱⋯淨⋯無量空處⋯無量識處⋯無所有處⋯非有想非無想處⋯一⋯別⋯若干⋯見⋯聞⋯識⋯知⋯得⋯觀⋯意所念⋯意所思⋯從此世至彼世⋯從彼世至此世⋯一切</span>, P. <em>pathaviṁ … āpaṁ … tejaṁ … vāyaṁ … bhūte … deve … pajāpatiṁ … brahmaṁ … ābhassare … subhakiṇhe … vehapphale … abhibhuṁ … ākāsānañcāyatanaṁ … viññāṇañcāyatanaṁ … ākiñcaññāyatanaṁ … nevasaññānāsaññāyatanaṁ … diṭṭhaṁ … sutaṁ … mutaṁ … viññātaṁ … ekattaṁ … nānattaṁ … sabbaṁ … nibbānaṁ</em>.<br/>
