--- a/01_agama/ekottarika/16/EA_16_03.md
+++ b/01_agama/ekottarika/16/EA_16_03.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | Chapter 16: The Fire Extinguished | 3. The Cr
 type: kramdown
 base: ../../../
 previous: EA_16_02.html
-next: ../19/EA_19_01.html
+next: EA_16_04.html
 ---
 
 <h1><a href='../index.html'>The Numerical Discourses</a></h1>
