Converted EA 2.1-10 to bilingual format

--- a/01_agama/ekottarika/02/EA_02_02.md
+++ b/01_agama/ekottarika/02/EA_02_02.md
@@ -1,39 +1,46 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 2. Ten Recollections | 2. The Dharma'
+title: 'The Numerical Discourses | Chapter 2: The Ten Recollections | 2. The Dharma'
 type: kramdown
 base: ../../../
 previous: EA_02_01.html
 next: EA_02_03.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 2: Ten Recollections
-### 2. The Dharma
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 2: The Ten Recollections</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(二)</th>
+  <th class='en'>2. The Dharma</th>
+  <tr>
+    <td class='ch' title='T125.2.552c17'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.552c18'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 便成神通，去眾亂想，逮沙門果，自致涅槃。 云何爲一法？ 所謂念法。 當善修行，當廣演布。 便成神通，去眾亂想，逮沙門果，自致涅槃。</td>
+    <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s that one thing? It’s called recollecting the Dharma. One should cultivate and widely disseminate it. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.552c22'>「是故，諸比丘，當修行一法，當廣布一法。 如是，諸比丘當作是學。」</td>
+    <td>“Therefore, monks, you should cultivate this one thing and widely disseminate this one thing. Thus, monks, should you train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.552c23'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s that one thing? It’s called recollecting the Dharma. One should cultivate and widely disseminate it. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, you should cultivate this one thing and widely disseminate this one thing. Thus, monks, should you train.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0552c17" target="_blank">T125.2.552c17-24</a>. This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/an1.296-305" target="_blank">AN 1.297</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 29 January 2023</p>
 
-### Notes
-
-1. {:#n1} This sūtra is parallel with [AN 1.297](https://suttacentral.net/an1.296-305){: target="_blank"}. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 29 January 2023
-{: .revised}
-
----
+<hr/>
