--- a/01_agama/ekottarika/02/EA_02_10.md
+++ b/01_agama/ekottarika/02/EA_02_10.md
@@ -1,45 +1,64 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 2. Ten Recollections | 10. Death'
+title: 'The Numerical Discourses | Chapter 2: The Ten Recollections | 10. Death'
 type: kramdown
 base: ../../../
 previous: EA_02_09.html
 next: ../03/EA_03_01.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 2: Ten Recollections
-### 10. Death
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 2: The Ten Recollections</h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一〇)</th>
+  <th class='en'>10. Death</th>
+  <tr>
+    <td class='ch' title='T125.2.553b23'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.553b24'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 便成神通，除諸亂想，獲沙門果，自致涅槃。 云何爲一法？ 所謂念死。 當善修行，當廣演布。 便成神通，去眾亂想，得沙門果，自致涅槃。</td>
+    <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s that one thing? It’s called recollecting death. One should cultivate and widely disseminate it. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.553b28'>「是故，諸比丘，當修行一法，當廣布一法。 如是，諸比丘當作是學。」</td>
+    <td>“Therefore, monks, you should cultivate this one thing and widely disseminate this one thing. Thus, monks, should you train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.553b29'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+<tr>
+  <td class='ch' title='t125.2.553c2'></td>
+  <td class='subheading'>Summary Verse</td>
+</tr>
+<tr>
+  <td title='T125.2.553c2'><ul class='verse'>
+    <li class='ch'>佛、法、聖眾念、<br/>
+    戒、施、及天念、<br/>
+    休息、安般念、<br/>
+    身、死念在後。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>[1] Recollection of the Buddha, [2] Dharma, and [3] noble Saṅgha;<br/>
+    [4] Recollection of precepts, [5] generosity, and [6] gods;<br/>
+    [7] Recollection of peace and [8] breathing;<br/>
+    And [9] recollection of the body and [10] death are last.</li>
+  </ul></td>
+</tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s that one thing? It’s called recollecting death. One should cultivate and widely disseminate it. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
-{:#p2}
+<hr/>
 
-3\. “Therefore, monks, you should cultivate this one thing and widely disseminate this one thing. Thus, monks, should you train.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0553b23" target="_blank">T125.2.553b23-c4</a>. This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/an1.296-305" target="_blank">AN 1.303</a>. [<a href="#ref1">back</a>]</p></li>
+</ol>
+<hr/>
 
-##### Summary Verse
-* {:.verse}Recollection of the Buddha, Dharma, and noble Saṅgha;\\
-Recollection of precepts, generosity, and gods;\\
-Recollection of peace and breathing;\\
-And recollection of the body and death are last.
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 29 January 2023</p>
 
----
-
-### Notes
-
-1. {:#n1} This sūtra is parallel with [AN 1.303](https://suttacentral.net/an1.296-305){: target="_blank"}. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 29 January 2023
-{: .revised}
-
----
+<hr/>
