--- a/01_agama/ekottarika/03/EA_03_10.md
+++ b/01_agama/ekottarika/03/EA_03_10.md
@@ -1,66 +1,93 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 3. Broader Explanations | 10. Death'
+title: 'The Numerical Discourses | Chapter 3: Broader Explanations | 10. Death'
 type: kramdown
 base: ../../../
 previous: EA_03_09.html
 next: ../08/EA_08_01.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 3: Broader Explanations
-### 10. Death
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 3: Broader Explanations</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(一〇) 念死</th>
+  <th class='en'>10. Death</th>
+  <tr>
+    <td class='ch' title='T125.2.556c13'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556c14'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 修行一法已，便有名譽，成大果報、諸善普至。 得甘露味，至無爲處。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何爲一法？ 所謂念死。」</td>
+    <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting death.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556c18'>佛告諸比丘： 「云何修行念死便有名譽，成大果報、諸善普至，得甘露味，至無爲處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
+    <td>The Buddha addressed the monks, “How does someone who cultivates the recollection of death become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556c21'>爾時，諸比丘白世尊曰： 「諸法之本如來所宣。 唯願，世尊，爲諸比丘説此妙法。 諸比丘從如來聞法已，便當受持。」</td>
+    <td>The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556c24'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當爲汝廣分別説。」</td>
+    <td>The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556c25'>諸比丘對曰： 「如是，世尊。」</td>
+    <td>They replied, “Yes, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556c26'>諸比丘前受教已，世尊告曰： 「若有比丘正身、正意，結跏趺坐，繋念在前。 無有他想，專精念死。</td>
+    <td>Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting death.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556c28'>「所謂死者此沒生彼，往來諸趣，命逝不停，諸根散壞如腐敗木。 命根斷絶，宗族分離，無形、無響、亦無相貎。</td>
+    <td>“‘Death’ means disappearing here and being born there, rebirth among the destinies, life departing and being unstable, and the limbs crumbling like rotten wood. The life faculty comes to an end, and one leaves tribe and clan without shape, echo, or appearance.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.557a1'>「如是，諸比丘，名曰念死。便得具足，成大果報、諸善普至，得甘露味，至無爲處。 便成神通，除諸亂想，獲沙門果，自致涅槃。</td>
+    <td>“This is how someone who cultivates the recollection of death will become well known,<sup id="ref2"><a href="#n2">2</a></sup> achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.557a4'>「是故，諸比丘，常當思惟、不離死念。 便當獲此諸善功徳。 如是，諸比丘當作是學。」</td>
+    <td>“Therefore, monks, one should constantly recollect death and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.557a6'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+<tr>
+  <td class='ch' title='t125.2.557a8'></td>
+  <td class='subheading'>Summary Verse</td>
+</tr>
+<tr>
+  <td title='T125.2.557a8'><ul class='verse'>
+    <li class='ch'>佛、法、及聖眾<br/>
+    ⋯乃至⋯竟死念。<br/>
+    雖與上同名，<br/>
+    其義各別異。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>[1] The Buddha, [2] Dharma, and [3] noble Saṅgha<br/>
+    … <em>up to</em> … the last [10] recollection of death.<br/>
+    Although they share the same name,<br/>
+    Their meanings each are special.</li>
+  </ul></td>
+</tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s this one thing? It’s called recollecting death.”
-{:#p2}
+<hr/>
 
-3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of death become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves?”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0556c13" target="_blank">T125.2.556c13-7a9</a>. This <em>sūtra</em> is an expanded explanation of <a href="../02/EA_02_10.html" target="_blank">EĀ 2.10</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>This is how … well known.</em> C. 如是，諸比丘，名曰念死。便得具足⋯. The Taisho edition appears to be corrupt, for it omits mention of becoming well known. Lit., it reads: “Thus, monks, is called ‘recollecting death.’ Then, attaining its perfection …”. I’ve translated the passage assuming that the original followed the format of the initial <em>sūtra</em>s in this chapter (i.e., 「是謂，諸比丘，若念死者便有名譽⋯」). [<a href="#ref2">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 11 March 2023</p>
 
-They replied, “Yes, Bhagavān.”
-
-6\. Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting death.
-{:#p6}
-
-7\. “‘Death’ means disappearing here and being born there, rebirth among the destinies, life departing and being unstable, and the limbs crumbling like rotten wood. The life faculty comes to an end, and one leaves tribe and clan without shape, echo, or appearance.
-{:#p7}
-
-8\. “This is how someone who cultivates the recollection of death will become well known,[\[1\]](#n1){:#ref1} achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
-{:#p8}
-
-9\. “Therefore, monks, one should constantly recollect death and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
-{:#p9}
-
-10\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p10}
-
-##### Summary Verse
-
-* {:.verse}The Buddha, Dharma, and noble Saṅgha\\
-Up to the last recollection of death.\\
-Although they share the same name,\\
-Their meanings each are special.
-
----
-
-### Notes
-
-1. {:#n1} *This is how … well known.* C. 如是，諸比丘，名曰念死。便得具足⋯. The Taisho edition appears to be corrupt, for it omits mention of becoming well known. Lit., it reads: “Thus, monks, is called ‘recollecting death.’ Then, attaining its perfection …”. I’ve translated the passage assuming that the original followed the format of the initial sūtras in this chapter (i.e., 「是謂，諸比丘，若念死者便有名譽⋯」). [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 11 March 2023
-{: .revised}
-
----
+<hr/>
