--- a/01_agama/ekottarika/03/EA_03_03.md
+++ b/01_agama/ekottarika/03/EA_03_03.md
@@ -1,63 +1,80 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 3. Broader Explanations | 3. The Saṅgha'
+title: 'The Numerical Discourses | Chapter 3: Broader Explanations | 3. The Saṅgha'
 type: kramdown
 base: ../../../
 previous: EA_03_02.html
 next: EA_03_04.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 3: Broader Explanations
-### The Saṅgha
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 3: Broader Explanations</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(三) 念僧</th>
+  <th class='en'>3. The Saṅgha</th>
+  <tr>
+    <td class='ch' title='T125.2.554c6'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.554c7'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 修行一法已，便有名譽，成大功徳、諸善普至。 得甘露味，至無爲處。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何爲一法？ 所謂念僧。」</td>
+    <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward<sup id="ref2"><a href="#n2">2</a></sup> and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting the <em>saṅgha</em>.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.554c11'>佛告諸比丘： 「云何修行念僧便有名譽，成大果報、諸善普至，得甘露味，至無爲處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
+    <td>The Buddha addressed the monks, “How does someone who cultivates the recollection of the <em>saṅgha</em> become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.554c14'>爾時，諸比丘白世尊曰： 「諸法之本如來所説。 唯願，世尊，爲諸比丘説此妙義。 諸比丘從如來聞已，便當受持。」</td>
+    <td>The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.554c17'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當爲汝廣分別説。」</td>
+    <td>The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.554c18'>對曰： 「如是，世尊。」</td>
+    <td>They replied, “Yes, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.554c18'>諸比丘前受教已，世尊告曰： 「若有比丘正身、正意，結跏趺坐，繋念在前。 無有他想，專精念眾。</td>
+    <td>Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting the <em>saṅgha</em>.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.554c21'>「如來聖眾善業成就。 質直，順義，無有邪業。 上下和穆，法法成就。 如來聖眾戒成就，三昧成就，智慧成就。 解脫成就，度知見成就。</td>
+    <td>“The Tathāgata’s noble assembly achieves good deeds. They are honest, follow doctrine, and don’t do any wrong deeds. Seniors and juniors are in harmony, and they accomplish the teachings. The Tathāgata’s noble assembly is accomplished in precepts, accomplished in <em>samādhi</em>, and accomplished in wisdom. They’re accomplished in liberation and accomplished in knowing and seeing liberation.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.554c24'>「聖眾者所謂四雙八輩。 是謂如來聖眾應當恭敬、承事、禮順。 所以然者？ 是世福田故。 於此眾中，皆同一器，亦以自度，復度他人，至三乘道。 如此之業名曰聖眾。</td>
+    <td>“‘Noble assembly’ means the four pairs and eight ranks of people.<sup id="ref3"><a href="#n3">3</a></sup> They are called the Tathāgata’s noble assembly who ought to be respected, served, and paid homage. For what reason? Because they are the world’s field of merit. Those among these assemblies are one and the same vessel, and they liberate other people by liberating themselves with the path of three vehicles. Those who do this work are called the ‘noble assembly.’</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.554c27'>「是謂，諸比丘，若念僧者便有名譽，成大果報、諸善普至，得甘露味，至無爲處。 便成神通，除諸亂想，逮沙門果，自致涅槃。</td>
+    <td>“This, monks, is how someone who cultivates the recollection of the <em>saṅgha</em> will become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555a1'>「是故，諸比丘，常當思惟、不離僧念。 便當獲此諸善功徳。 如是，諸比丘當作是學。」</td>
+    <td>“Therefore, monks, one should constantly recollect the <em>saṅgha</em> and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555a3'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward[\[1\]](#n1){:#ref1} and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s this one thing? It’s called recollecting the Saṅgha.”
-{:#p2}
+<hr/>
 
-3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of the Saṅgha become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves?”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0554c06" target="_blank">T125.2.554c6-5a4</a>. This <em>sūtra</em> is an expanded explanation of <a href="../02/EA_02_03.html" target="_blank">EĀ 2.3</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>great reward</em>. The C. here reads “great virtue” (大功徳), which is inconsistent with the introduction of the rest of his chapter’s <em>sūtra</em>s. I’ve ignored it as a translation or editing error. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>four pairs and eight ranks</em>. C. 四雙八輩, P. <em>cattāri purisayugāni aṭṭha purisapuggalā</em>. This expression is not explicitly explained in the <cite>Ekottarika Āgama</cite>, but the usual understanding in other early Buddhist sources is this: The four pairs refers to people in the process of entering the stream, and those who have entered it, and so on for once-returners, non-returners, and <em>arhat</em>s. Altogether, they make eight ranked levels of awakening. The expressions “four pairs” and “eight ranks” refer to this same list, counted in different ways (cf. the expanded passage found in <a href="../../dirgha/DA_5.html#p19" target="_blank">DĀ 5</a>). [<a href="#ref3">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 11 March 2023</p>
 
-They replied, “Yes, Bhagavān.”
-
-6\. Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting the Saṅgha.
-{:#p6}
-
-7\. “The Tathāgata’s noble assembly achieves good deeds. They are honest, follow doctrine, and don’t do any wrong deeds. Seniors and juniors are in harmony, and they accomplish the teachings. The Tathāgata’s noble assembly is accomplished in precepts, accomplished in samādhi, and accomplished in wisdom. They’re accomplished in liberation and accomplished in knowing and seeing liberation.
-{:#p7}
-
-8\. “‘Noble assembly’ means the four pairs and eight ranks of people.[\[2\]](#n2){:#ref2} They are called the Tathāgata’s noble assembly who ought to be respected, served, and paid homage. For what reason? Because they are the world’s field of merit. Those among these assemblies are one and the same vessel, and they liberate other people by liberating themselves with the path of three vehicles. Those who do this work are called the ‘noble assembly.’
-{:#p8}
-
-9\. “This, monks, is how someone who cultivates the recollection of the Saṅgha will become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
-{:#p9}
-
-10\. “Therefore, monks, one should constantly recollect the Saṅgha and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
-{:#p10}
-
-11\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p11}
-
----
-
-### Notes
-
-1. {:#n1} *great reward*. The C. here reads “great virtue” (大功徳), which is inconsistent with the introduction of the rest of his chapter’s sūtras. I’ve ignored it as a translation or editing error. [\[back\]](#ref1)
-2. {:#n2} *four pairs and eight ranks*. C. 四雙八輩, P. *cattāri purisayugāni aṭṭha purisapuggalā*. This expression is not explicitly explained in the *Ekottarika Āgama*, but the usual understanding in other early Buddhist sources is this: The four pairs refers to people in the process of entering the stream, and those who have entered it, and so on for once-returners, non-returners, and *arhat*s. Altogether, they make eight ranked levels of awakening. The expressions “four pairs” and “eight ranks” refer to this same list, counted in different ways (cf. the expanded passage found in [DĀ 5](../../dirgha/DA_5.html#p19){:target="_blank"}). [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 11 March 2023
-{: .revised}
-
----
+<hr/>
