--- a/01_agama/ekottarika/03/EA_03_04.md
+++ b/01_agama/ekottarika/03/EA_03_04.md
@@ -1,60 +1,76 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 3. Broader Explanations | 4. The Precepts'
+title: 'The Numerical Discourses | Chapter 3: Broader Explanations | 4. The Precepts'
 type: kramdown
 base: ../../../
 previous: EA_03_03.html
 next: EA_03_05.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 3: Broader Explanations
-### 4. The Precepts
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 3: Broader Explanations</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(四) 念戒</th>
+  <th class='en'>4. The Precepts</th>
+  <tr>
+    <td class='ch' title='T125.2.555a5'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555a6'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 修行一法已，便有名譽，成大果報，諸善普至。 得甘露味，至無爲處。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何爲一法？ 所謂念戒。」</td>
+    <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting the precepts.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555a10'>佛告諸比丘： 「云何修行念戒便有名譽，成大果報、諸善普至，得甘露味，至無爲處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
+    <td>The Buddha addressed the monks, “How does someone who cultivates the recollection of the precepts become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruit of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555a13'>爾時，諸比丘白世尊曰： 「諸法之本如來所説。 唯願，世尊，爲諸比丘説此妙義。 諸比丘從如來聞已，便當受持。」</td>
+    <td>The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555a16'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當爲汝廣分別説。」</td>
+    <td>The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555a17'>諸比丘對曰： 「如是，世尊。」</td>
+    <td>They replied, “Yes, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555a18'>諸比丘前受教已，世尊告曰： 「若有比丘正身、正意，結跏趺坐，繋念在前。 無有他想，專精念戒。</td>
+    <td>Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting the precepts.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555a20'>「所謂戒者息諸惡故，戒能成道，令人歡喜。 戒纓絡身，現眾好故。 夫禁戒者猶吉祥瓶所願便剋，諸道品法皆由戒成。</td>
+    <td>“‘The precepts’ refers to the precepts that make it possible to achieve the path by stopping evil deeds and causing people to rejoice. The precepts are a jeweled body because they make many beautiful things appear. The rules and precepts are like a fortune vase that provides what one wishes,<sup id="ref2"><a href="#n2">2</a></sup> for the factors of the path are derived from acccomplishing the precepts.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555a22'>「如是，比丘，行禁戒者成大果報、諸善普至，得甘露味，至無爲處。 便成神通，除諸亂想，獲沙門果，自致涅槃。</td>
+    <td>“This is how someone who cultivates the recollection of the precepts will become well known,<sup id="ref3"><a href="#n3">3</a></sup> achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555a25'>「是故，諸比丘，常當思惟、不離戒念。 便當獲此諸善功徳。 如是，諸比丘當作是學。」</td>
+    <td>“Therefore, monks, one should constantly recollect the precepts and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555a27'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s this one thing? It’s called recollecting the precepts.”
-{:#p2}
+<hr/>
 
-3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of the precepts become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruit of the ascetic, and bring about nirvāṇa themselves?”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0555a05" target="_blank">T125.2.555a5-28</a>. This <em>sūtra</em> is an expanded explanation of <a href="../02/EA_02_04.html" target="_blank">EĀ 2.4</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>fortune vase that provides what one wishes</em>. C. 吉祥瓶所願便剋. “Fortune vase” (吉祥瓶) seems to reference a magic container that produces whatever one wants. The commentary gives us more context for this passage (at <a href="https://cbetaonline.dila.edu.tw/zh/T25n1507_p0038b01" target="_blank">T1507.25.38b</a>): “If one wants to end their bondage and seek awakening, they should focus on that wish. It’s like a fortune vase: Whatever a person wants, they [reach in] and get it” (若欲斷結求道，所願應意。猶吉祥瓶：隨人所欲，取即得之). This reference to a magic container appears again in <a href="../10/EA_10_04.html" target="_blank">EĀ 10.4</a> where it’s a metaphor for benefactors who give whatever is needed. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>This is how … well known.</em> C. 如是，比丘，行禁戒者. The <cite>Taisho</cite> edition appears to be corrupt because it omits mention of a recollection or becoming well known. Lit., it reads: “Thus, monks, someone who practices the precepts achieves a great reward … .” I’ve translated the passage assuming that the original followed the format of the first three <em>sūtra</em>s in this chapter (i.e., 「是謂，諸比丘，若念戒者便有名譽⋯」). [<a href="#ref3">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 11 March 2023</p>
 
-They replied, “Yes, Bhagavān.”
-
-6\. Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting the precepts.
-{:#p6}
-
-7\. “‘The precepts’ refers to the precepts that make it possible to achieve the path by stopping evil deeds and causing people to rejoice. The precepts are a jeweled body because they make many beautiful things appear. The rules and precepts are like a fortune vase that provides what one wishes,[\[1\]](#n1){:#ref1} for the factors of the path are derived from acccomplishing the precepts.
-{:#p7}
-
-8\. “This is how someone who cultivates the recollection of the precepts will become well known,[\[2\]](#n2){:#ref2} achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
-{:#p8}
-
-9\. “Therefore, monks, one should constantly recollect the precepts and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
-{:#p9}
-
-10\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p10}
-
----
-
-### Notes
-
-1. {:#n1} *fortune vase that provides what one wishes*. C. 吉祥瓶所願便剋. “Fortune vase” (吉祥瓶) seems to reference a magic container that produces whatever one wants. The commentary gives us more context for this passage (at T1507.25.38b): “If one wants to end their bondage and seek awakening, they should focus on that wish. It’s like a fortune vase: Whatever a person wants, they [reach in] and get it” (若欲斷結求道，所願應意。猶吉祥瓶：隨人所欲，取即得之). This reference to a magic container appears again in EĀ 10.4 where it’s a metaphor for benefactors who give whatever is needed. [\[back\]](#ref1)
-2. {:#n2} *This is how … well known.* C. 如是，比丘，行禁戒者. The *Taisho* edition appears to be corrupt, for it omits mention of a recollection or becoming well known. Lit., it reads: “Thus, monks, someone who practices the precepts achieves a great reward … .” I’ve translated the passage assuming that the original followed the format of the first three sūtras in this chapter (i.e., 「是謂，諸比丘，若念戒者便有名譽⋯」). [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 11 March 2023
-{: .revised}
-
----
+<hr/>
