--- a/01_agama/ekottarika/03/EA_03_07.md
+++ b/01_agama/ekottarika/03/EA_03_07.md
@@ -1,60 +1,76 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 3. Broader Explanations | 7. Peace'
+title: 'The Numerical Discourses | Chapter 3: Broader Explanations | 7. Peace'
 type: kramdown
 base: ../../../
 previous: EA_03_06.html
 next: EA_03_08.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 3: Broader Explanations
-### 7. Peace
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 3: Broader Explanations</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(七) 念休息</th>
+  <th class='en'>7. Peace</th>
+  <tr>
+    <td class='ch' title='T125.2.555c20'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555c21'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 修行一法已，便有名譽，成大果報、諸善普至。 得甘露味，至無爲處。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何爲一法？ 所謂念休息。」</td>
+    <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting peace.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555c25'>佛告諸比丘： 「云何修行念休息便有名譽，成大果報、眾善普至，得甘露味，至無爲處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
+    <td>The Buddha addressed the monks, “How does someone who cultivates the recollection of peace become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.555c28'>爾時，諸比丘白世尊曰： 「諸法之本如來所説。 唯願，世尊，爲諸比丘説此妙義。 諸比丘從如來聞已，便當受持。」</td>
+    <td>The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556a1'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當爲汝廣分別説。」</td>
+    <td>The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556a3'>諸比丘對曰： 「如是，世尊。」</td>
+    <td>They replied, “Yes, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556a4'>諸比丘前受教已，世尊告曰： 「若有比丘正身、正意，結跏趺坐，繋念在前。 無有他想，專精念休息。</td>
+    <td>Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting peace.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556a6'>「所謂休息者心、意、想息。 志、性詳、諦、亦無卒暴。 恒專一心，意樂閑居，常求方便入三昧定。 常念、不貪，勝光上達。</td>
+    <td>“‘Peace’ means calmness of heart, mind, and ideas. One’s intent and disposition becomes careful, honest, and without abruptness. Being focused all the time, they are happy living in seclusion and regularly pursuing the methods of entering samādhi. They are always mindful, not covetous, and rise up to a greater light.<sup id="ref2"><a href="#n2">2</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556a8'>「如是，諸比丘，名曰念休息。便得具足，成大果報、諸善普至，得甘露味，至無爲處。 便成神通，除諸亂想，獲沙門果，自致涅槃。</td>
+    <td>“This is how someone who cultivates the recollection of peace will become well known,<sup id="ref3"><a href="#n3">3</a></sup> achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556a11'>「是故，諸比丘，常當思惟、不離休息念。 便當獲此諸善功徳。 如是，諸比丘當作是學。」</td>
+    <td>“Therefore, monks, one should constantly recollect peace and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556a13'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s this one thing? It’s called recollecting peace.”
-{:#p2}
+<hr/>
 
-3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of peace become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves?”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0555b25" target="_blank">T125.2.555c20-6a14</a>. This <em>sūtra</em> is an expanded explanation of <a href="../02/EA_02_07.html" target="_blank">EĀ 2.7</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>rise up to a greater light.</em> C. 勝光上達. This esoteric expression seems to refer to spiritual progress in general. The verb 上達 is used occasionally in other Chinese translations (e.g., at <a href="https://cbetaonline.dila.edu.tw/zh/T03n0152_p0008a21" target="_blank">T152.3.8a21</a> and <a href="https://cbetaonline.dila.edu.tw/zh/T10n0291_p0603b08" target="_blank">T291.10.603b8</a>) to mean ascending into the sky or up to a heavenly place. This would suggest a “greater light” refers to a heavenly rebirth. In other texts, “greater light” (勝光) is usually associated with heavenly light, such as the luminance created by a god visiting the Buddha at night. Neither term (勝光 or 上達) occurs again in EĀ. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>This is how … well known.</em> C. 如是，諸比丘，名曰念休息。便得具足⋯. The Taisho edition appears to be corrupt, for it omits mention of becoming well known. Lit., it reads: “Thus, monks, this is called ‘recollecting peace.’ Then, attaining its perfection …”. I’ve translated the passage assuming that the original followed the format of the initial <em>sūtra</em>s in this chapter (i.e., 「是謂，諸比丘，若念休息者便有名譽⋯」). [<a href="#ref3">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 11 March 2023</p>
 
-They replied, “Yes, Bhagavān.”
-
-6\. Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting peace.
-{:#p6}
-
-7\. “‘Peace’ means calmness of heart, mind, and ideas. One’s intent and disposition becomes careful, honest, and without abruptness. Being focused all the time, they are happy living in seclusion and regularly pursuing the methods of entering samādhi. They are always mindful, not covetous, and rise up to a greater light.[\[1\]](#n1){:#ref1}
-{:#p7}
-
-8\. “This is how someone who cultivates the recollection of peace will become well known,[\[2\]](#n2){:#ref2} achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
-{:#p8}
-
-9\. “Therefore, monks, one should constantly recollect peace and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
-{:#p9}
-
-10\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p10}
-
----
-
-### Notes
-
-1. {:#n1} *rise up to a greater light.* C. 勝光上達. This esoteric expression seems to refer to spiritual progress in general. The verb 上達 is used occasionally in other Chinese translations (e.g., at T152.3.8a21 and T291.10.603b8) to mean ascending into the sky or up to a heavenly place. This would suggest a “greater light” refers to a heavenly rebirth. In other texts, “greater light” (勝光) is usually associated with heavenly light, such as the luminance created by a god visiting the Buddha at night. Neither term (勝光 or 上達) occurs again in EĀ. [\[back\]](#ref1)
-2. {:#n2} *This is how … well known.* C. 如是，諸比丘，名曰念休息。便得具足⋯. The Taisho edition appears to be corrupt, for it omits mention of becoming well known. Lit., it reads: “Thus, monks, this is called ‘recollecting peace.’ Then, attaining its perfection …”. I’ve translated the passage assuming that the original followed the format of the initial sūtras in this chapter (i.e., 「是謂，諸比丘，若念休息者便有名譽⋯」). [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 11 March 2023
-{: .revised}
-
----
+<hr/>
