--- a/01_agama/ekottarika/03/EA_03_08.md
+++ b/01_agama/ekottarika/03/EA_03_08.md
@@ -1,66 +1,84 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 3. Broader Explanations | 8. Breathing'
+title: 'The Numerical Discourses | Chapter 3: Broader Explanations | 8. Breathing'
 type: kramdown
 base: ../../../
 previous: EA_03_07.html
 next: EA_03_09.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 3: Broader Explanations
-### 8. Breathing
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 3: Broader Explanations</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(八) 念安般</th>
+  <th class='en'>8. Breathing</th>
+  <tr>
+    <td class='ch' title='T125.2.556a15'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556a16'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 修行一法已，便有名譽，成大果報、諸善普具。 得甘露味，至無爲處。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何爲一法？ 所謂念安般。」</td>
+    <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting breathing.”<sup id="ref2"><a href="#n2">2</a></sup></td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556a20'>佛告諸比丘： 「云何修行念安般便有名譽，成大果報、眾善普具，得甘露味，至無爲處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
+    <td>The Buddha addressed the monks, “How does someone who cultivates the recollection of breathing become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556a23'>爾時，諸比丘白世尊曰： 「諸法之本如來所宣。 唯願，世尊，爲諸比丘説此妙義。 諸比丘從如來聞已，便當受持。」</td>
+    <td>The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556a26'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當爲汝廣分別説。」</td>
+    <td>The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556a27'>諸比丘對曰： 「如是，世尊。」</td>
+    <td>They replied, “Yes, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556a28'>諸比丘前受教已，世尊告曰： 「若有比丘正身、正意，結跏趺坐，繋念在前。 無有他想，專精念安般。</td>
+    <td>Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting breathing.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556b1'>「所謂安般者：若息長時，亦當觀、知：『我今息長』。 若復息短，亦當觀、知：『我今息短』。 若息極冷，亦當觀、知：『我身息冷』。 若復息熱，亦當觀、知：『我今息熱』。 具觀身體從頭至足，皆當觀知。</td>
+    <td>“‘Breathing’ means observing and knowing, ‘Now my breaths are long,’ when one’s breaths are long. It means observing and knowing, ‘Now my breaths are short,’ when one’s breaths are short. It means observing and knowing, ‘Now my breaths are very cold,’ when one’s breaths are cold. It means observing and knowing, ‘Now my breaths are hot,’ when one’s breaths are hot.<sup id="ref3"><a href="#n3">3</a></sup> The practitioner fully observes their body, observing and knowing it from head to toe.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556b5'>「若復息有長、短，亦當觀：『息有長、有短』。 用心持身知息長、短，皆悉知之。 尋，息出、入分別、曉了。 若心持身知息長、短，亦復知之，數息長、短分別、曉了。</td>
+    <td>“It also means observing, ‘Some of my breaths are long, and some are short,’ when one’s breaths are long and short. They keep their body in mind, fully knowing their breaths to be long or short. They immediately discern and are fully aware of it as they breath in and out. If they keep their body in mind while knowing their breaths are long or short, then they will also know the number of breaths that are long or short, discerning and understanding it clearly.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556b8'>「如是，諸比丘，名曰念安般。便得具足，成大果報、諸善普至，得甘露味，至無爲處。 便成神通，除諸亂想，獲沙門果，自致涅槃。</td>
+    <td>“This is how someone who cultivates the recollection of breathing will become well known,<sup id="ref4"><a href="#n4">4</a></sup> achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556b11'>「是故，諸比丘，常當思惟、不離安般念。 便當獲此諸善功徳。 如是，諸比丘，當作是學。」</td>
+    <td>“Therefore, monks, one should constantly attend to this and not part from the recollection of breathing. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556b13'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s this one thing? It’s called recollecting breathing.”
-{:#p2}
+<hr/>
 
-3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of breathing become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves?”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0556a15" target="_blank">T125.2.556a15-b14</a>. This <em>sūtra</em> is an expanded explanation of <a href="../02/EA_02_08.html" target="_blank">EĀ 2.8</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>recollecting breathing</em>. C. 念安般 (EMC. “recollect” + an-buan = Pkt. <em>ān[ā]pān[a]</em>), P. <em>ānāpānassati</em>, S. <em>ānāpānasmṛti</em>. The term for breathing has been transliterated here as 安般, which was probably a short version of the compound <em>āna-apāna</em> (“inhale and exhale” = breathing). [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p>This inclusion of observing breaths as cold and hot is a peculiarity of EĀ’s version of the mindfulness of breathing that’s both confusing and intriguing. It reoccurs in <a href="../17/EA_17_01.html">EĀ 17.1</a>, which is parallel to <a href="https://suttacentral.net/mn62" target="_blank">MN 62</a>, so it’s unlikely to be a spurious addition.</p>
+<p>A possible connection occurs in a meditation manual (<a href="https://cbetaonline.dila.edu.tw/zh/T15n0614_p0275a11" target="_blank">T614.15.275a11</a>) produced by Kumārajīva in China about twenty years after the translation of EĀ. This text recommends that beginners be taught to count their breaths in order to remain mindful of them. When they’ve become skilled enough to stop counting, they are advised to discern the difference between inhaled and exhaled breaths by the fact that inhaled air is cold and exhaled air is warm. This, however, is not the same as our passage as it occurs in full in EĀ 17.1, which says the practitioner is aware of both inhaling and exhaling cold and warm breaths.</p>
+<p>Kumārajīva based his teachings on a combination of Sarvāstivāda and Mahāyāna sources, as can be seen manifest at length in his <cite>Commentary to the Large Perfection of Wisdom Sūtra</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T25n1509_f001" target="_blank">T1509</a>). T614 was similarly a work drawn from multiple sources and includes specific passages found in Aśvaghoṣa’s <cite>Saundarananda</cite>. Recent scholarship has led to the theory that Aśvaghoṣa was a Mahāsāṃghika Buddhist, and that he drew inspiration from the Sautrantika and/or Yogācara schools of northern Buddhism when composing the <cite>Saundarananda</cite>.</p>
+<p>But the mention of cold and warm breath is not found in the extant Mahāsāṃghika presentation of the mindfulness of breathing in the Chinese translation of their Vinaya (<a href="https://cbetaonline.dila.edu.tw/zh/T22n1425_p0254c14" target="_blank">T1425.22.254c14</a>), nor in the <cite>Yogācarabhūmi</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T30n1579_p0432a28" target="_blank">T1579.27.432a28</a>). Thus far, I’ve been stymied in my search for a direct parallel to this passage, which would lend us some welcome evidence as to the provenance of this particular EĀ. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>This is how … well known.</em> C. 如是，諸比丘，名曰念安般。便得具足⋯. The Taisho edition appears to be corrupt, for it omits mention of becoming well known. Lit., it reads: “Thus, monks, is called ‘recollecting breathing.’ Then, attaining its perfection …”. I’ve translated the passage assuming that the original followed the format of the initial <em>sūtra</em>s in this chapter (i.e., 「是謂，諸比丘，若念安般者便有名譽⋯」). [<a href="#ref4">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 11 March 2023</p>
 
-They replied, “Yes, Bhagavān.”
-
-6\. Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting breathing.
-{:#p6}
-
-7\. “‘Breathing’ means observing and knowing, ‘Now my breaths are long,’ when one’s breaths are long. It means observing and knowing, ‘Now my breaths are short,’ when one’s breaths are short. It means observing and knowing, ‘Now my breaths are very cold,’ when one’s breaths are cold. It means observing and knowing, ‘Now my breaths are hot,’ when one’s breaths are hot.[\[1\]](#n1){:#ref1} The practitioner fully observes their body, observing and knowing it from head to toe.
-{:#p7}
-
-8\. “It also means observing, ‘Some of my breaths are long, and some are short,’ when one’s breaths are long and short. They keep their body in mind, fully knowing their breaths to be long or short. They immediately discern and are fully aware of it as they breath in and out. If they keep their body in mind while knowing their breaths are long or short, then they will also know the number of breaths that are long or short, discerning and understanding it clearly.
-{:#p8}
-
-9\. “This is how someone who cultivates the recollection of breathing will become well known,[\[2\]](#n2){:#ref2} achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
-{:#p9}
-
-10\. “Therefore, monks, one should constantly attend to this and not part from the recollection of breathing. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
-{:#p10}
-
-11\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p11}
-
----
-
-### Notes
-
-1. {:#n1} This inclusion of observing breaths as cold and hot is a peculiarity of EĀ’s version of the mindfulness of breathing that’s both confusing and intriguing. It reoccurs in EĀ 17.1, which is parallel to MN 62, so it’s unlikely to be a spurious addition.\\
-A possible connection occurs in a meditation manual (T614.15.275a11) produced by Kumārajīva in China about twenty years after the translation of EĀ. This text recommends that beginners be taught to count their breaths in order to remain mindful of them. When they’ve become skilled enough to stop counting, they are advised to discern the difference between inhaled and exhaled breaths by the fact that inhaled air is cold and exhaled air is warm. This, however, is not the same as our passage as it occurs in full in EĀ 17.1, which says the practitioner is aware of both inhaling and exhaling cold and warm breaths.\\
-Kumārajīva tended to base his teachings on a combination of Sarvāstivāda and Mahāyāna sources, as can be seen manifest at length in his *Commentary to the Large Perfection of Wisdom Sutra* (T1509). T614 was similarly a work drawn from multiple sources, and includes specific passages found in Aśvaghoṣa’s *Saundarananda*. Recent scholarship has led to the theory that Aśvaghoṣa was a Mahāsāṃghika Buddhist, and that he drew inspiration from the Sautrantika and/or Yogācara schools of northern Buddhism when composing the *Saundarananda*.\\
-But the mention of cold and warm breath is not found in the extant Mahāsāṃghika presentation of the mindfulness of breathing in the Chinese translation of their Vinaya (T1425.22.254c), nor in the *Yogācarabhūmi* (T1579.27.432a). Thus far, I’ve been stymied in my search for a direct parallel to this passage, which would lend us some welcome evidence as to the provenance of this particular EĀ if one can be located. [\[back\]](#ref1)
-2. {:#n2} *This is how … well known.* C. 如是，諸比丘，名曰念安般。便得具足⋯. The Taisho edition appears to be corrupt, for it omits mention of becoming well known. Lit., it reads: “Thus, monks, is called ‘recollecting breathing.’ Then, attaining its perfection …”. I’ve translated the passage assuming that the original followed the format of the initial sūtras in this chapter (i.e., 「是謂，諸比丘，若念安般者便有名譽⋯」). [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 11 March 2023
-{: .revised}
-
----
+<hr/>
