--- a/01_agama/ekottarika/03/EA_03_09.md
+++ b/01_agama/ekottarika/03/EA_03_09.md
@@ -1,62 +1,78 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 3. Broader Explanations | 9. The Body'
+title: 'The Numerical Discourses | Chapter 3: Broader Explanations | 9. The Body'
 type: kramdown
 base: ../../../
 previous: EA_03_08.html
 next: EA_03_10.html
 ---
 
-# [The Numerical Discourses](../index.html)
-## Chapter 3: Broader Explanations
-### 9. The Body
+<h1><a href='../index.html'>The Numerical Discourses</a></h1>
+<h2>Chapter 3: Broader Explanations</h2>
 
-1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>(九) 念身</th>
+  <th class='en'>9. The Body</th>
+  <tr>
+    <td class='ch' title='T125.2.556b15'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
+    <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556b16'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 修行一法已，便有名譽，成大果報、諸善普至。 得甘露味，至無爲道。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何爲一法？ 所謂念身。」</td>
+    <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state.<sup id="ref2"><a href="#n2">2</a></sup> They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting the body.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556b20'>佛告諸比丘： 「云何修行念身便有名譽，成大果報、諸善普至，得甘露味，至無爲處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
+    <td>The Buddha addressed the monks, “How does someone who cultivates the recollection of the body become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556b23'>爾時，諸比丘白世尊曰： 「諸法之本如來所宣。 唯願，世尊，爲諸比丘説此妙法。 諸比丘從如來聞法已，便當受持。」</td>
+    <td>The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556b26'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當爲汝廣分別説。」</td>
+    <td>The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556b27'>諸比丘對曰： 「如是，世尊。」</td>
+    <td>They replied, “Yes, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556b28'>諸比丘前受教已，世尊告曰： 「若有比丘正身、正意，結跏趺坐，繋念在前。 無有他想，專精念身。</td>
+    <td>Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting the body.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556c1'>「所謂念身者髮、毛、爪、齒、皮、肉、筋、骨，膽、肝、肺、心、脾、腎、大腸、小腸、白䐈、膀胱，屎、尿、百葉滄蕩脾泡、溺、涙、唾涕，膿、血、肪脂、漾髑髏、腦。 何者是身爲？ 「地種是也。」 「水種是也。」 「火種是耶。」 「風種是也。」 爲父種母種所造耶？ 從何處來？ 爲誰所造？ 眼、耳、鼻、口、身、心，此終當生何處？</td>
+    <td>“‘Recollecting the body’ means the beard, hair, nails, teeth, skin, muscles, sinews, and bones; gall bladder, liver, lungs, heart, spleen, kidneys, large and small intestines, white membrane, and bladder; feces, urine, the contents of the stomach,<sup id="ref3"><a href="#n3">3</a></sup> tears, saliva, and snot; and pus, blood, fat, cerebral fluid,<sup id="ref4"><a href="#n4">4</a></sup> and brain. What is the body made of? ‘This is earth element.’ ‘This is water element.’ ‘This is fire element.’ ‘This is air element.’ How is it made from the seeds of father and mother? Where does it come from? Who made it? From whence did the eye, ear, nose, tongue, body, and mind ultimately arise?</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556c7'>「如是，諸比丘，名曰念身。便得具足，成大果報、諸善普至，得甘露味，至無爲處。 便成神通，除諸亂想，獲沙門果，自致涅槃。</td>
+    <td>“This is how someone who cultivates the recollection of the body will become well known,<sup id="ref5"><a href="#n5">5</a></sup> achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556c10'>「是故，諸比丘，常當思惟、不離身念。 便當獲此諸善功徳。 如是，諸比丘當作是學。」</td>
+    <td>“Therefore, monks, one should constantly recollect the body and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”</td>
+  </tr>
+  <tr>
+    <td class='ch' title='T125.2.556c12'>爾時，諸比丘聞佛所説歡喜，奉行。</td>
+    <td>When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state.[\[1\]](#n1){:#ref1} They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s this one thing? It’s called recollecting the body.”
-{:#p2}
+<hr/>
 
-3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of the body become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves?”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”
-{:#p4}
+<ol class="notes-list">
+<li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0556b15" target="_blank">T125.2.556b15-c12</a>. This <em>sūtra</em> is an expanded explanation of <a href="../02/EA_02_09.html" target="_blank">EĀ 2.9</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>the unconditioned state</em>. C. 無爲道. The C. here is inconsistent with the other <em>sūtra</em>s in this chapter. I.e., 無爲處 (“unconditioned abode”) has been changed to 無爲道 (“unconditioned awakening” or “path”). I’ve disregarded this change as a translation or editing error. The expression refers to becoming an <em>arhat</em> according to the commentary (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T25n1507_p0037b11" target="_blank">T1507.25.37b11</a>), so the difference is not that significant, in any case. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>the contents of the stomach</em>. C. 百葉滄蕩脾泡. 百葉 was used to refer to the multi-stage stomachs of animals like cows and sheep. Overall, the passage appears garbled, and later editions rewrote it as 滄腸胃泡 or 倉腸胃脬. The gist of it appears to be the liquid contents of the stomach. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>cerebral fluid</em>. C. 漾髑髏. Lit. “cranial fluid.” [<a href="#ref4">back</a>]</p></li>
+<li id="n5"><p><em>This is how … well known.</em> C. 如是，諸比丘，名曰念身。便得具足⋯. The Taisho edition appears to be corrupt, for it omits mention of becoming well known. Lit., it reads: “Thus, monks, is called ‘recollecting the body.’ Then, attaining its perfection …”. I’ve translated the passage assuming that the original followed the format of the initial <em>sūtra</em>s in this chapter (i.e., 「是謂，諸比丘，若念身者便有名譽⋯」). [<a href="#ref5">back</a>]</p></li>
+</ol>
+<hr/>
 
-5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 11 March 2023</p>
 
-They replied, “Yes, Bhagavān.”
-
-6\. Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting the body.
-{:#p6}
-
-7\. “‘Recollecting the body’ means the beard, hair, nails, teeth, skin, muscles, sinews, and bones; gall bladder, liver, lungs, heart, spleen, kidneys, large and small intestines, white membrane, and bladder; feces, urine, the contents of the stomach,[\[2\]](#n2){:#ref2} tears, saliva, and snot; and pus, blood, fat, cerebral fluid,[\[3\]](#n3){:#ref3} and brain. What is the body made of? ‘This is earth element.’ ‘This is water element.’ ‘This is fire element.’ ‘This is air element.’ How is it made from the seeds of father and mother? Where does it come from? Who made it? From whence did the eye, ear, nose, tongue, body, and mind ultimately arise?
-{:#p7}
-
-8\. “This is how someone who cultivates the recollection of the body will become well known,[\[4\]](#n4){:#ref4} achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
-{:#p8}
-
-9\. “Therefore, monks, one should constantly recollect the body and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
-{:#p9}
-
-10\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p10}
-
----
-
-### Notes
-
-1. {:#n1} *the unconditioned state*. C. 無爲道. The C. here is inconsistent with the other sūtras in this chapter. I.e., 無爲處 (“unconditioned abode”) has been changed to 無爲道 (“unconditioned awakening”). I’ve disregarded this change as a translation or editing error. The expression refers to becoming an arhat according to the commentary (cf. T1507.25.37b), so the difference is not that significant, in any case. [\[back\]](#ref1)
-2. {:#n2} *the contents of the stomach*. C. 百葉滄蕩脾泡. 百葉 was used to refer to the multi-stage stomachs of animals like cows and sheep. Overall, the passage appears garbled, and later editions rewrote it as 滄腸胃泡 or 倉腸胃脬. The gist of it appears to be the liquid contents of the stomach. [\[back\]](#ref2)
-3. {:#n3} *cerebral fluid*. C. 漾髑髏. Lit. “cranial fluid.” [\[back\]](#ref3)
-4. {:#n4} *This is how … well known.* C. 如是，諸比丘，名曰念身。便得具足⋯. The Taisho edition appears to be corrupt, for it omits mention of becoming well known. Lit., it reads: “Thus, monks, is called ‘recollecting the body.’ Then, attaining its perfection …”. I’ve translated the passage assuming that the original followed the format of the initial sūtras in this chapter (i.e., 「是謂，諸比丘，若念身者便有名譽⋯」). [\[back\]](#ref4)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 11 March 2023
-{: .revised}
-
----
+<hr/>
